2004-02-19  Richard Henderson  <rth@redhat.com>

        * c-opts.c (warn_variadic_macros): New.
        (c_common_handle_option): Set it.
        (sanitize_cpp_opts): Copy it to cpp_opts.
        * c.opt (Wvariadic-macros): New.
        * cpplib.h (struct cpp_options): Add warn_variadic_macros.
        * cppinit.c (cpp_create_reader): Initialize it.
        * cppmacro.c (parse_params): Check it.

2004-02-19  Jeff Law  <law@redhat.com>

	* fold-const.c (invert_truthvalue): Do not call invert_tree_comparison
	for unordered comparison codes.

2004-02-17  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
	* cfghooks.c (split_edge): Speed up updating of dominators.
 
2004-02-16  Steven Bosscher  <stevenb@suse.de>

	* (c-decl.c, calls.c, cgraph.c, cgraphunit.c, expr.c, function.c,
	integrate.c, print-tree.c, toplev.c, tree-inline.c, tree-nested.c,
	tree-optimize.s, tree.h): Replace DECL_SAVED_INSNS with
	DECL_STRUCT_FUNCTION.
	* ada/utils.c: Likewise.
	* cp/decl.c: Likewise.
	* f/com.c: Likewise.
	* fortran/trans-decl.c: Likewise.
	* java/decl.c: Likewise.

2004-02-16  Richard Henderson  <rth@redhat.com>

        * cse.c (cse_insn): Don't lose REG_NON_LOCAL_GOTO note.

	* fold-const.c (operand_equal_p): Fix VECTOR_CST comparison.

2004-02-11  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/mips/mips.h (TARGET_OLDABI): Define. Use TARGET_NEWABI and
	TARGET_LODABI consistently.
	* config/mips/mips.c (function_arg,mips_setup_incoming_varargs,
	mips_va_arg,override_options,compute_frame_size,
	mips_initial_elimination_offset,mips16_fp_args,build_mips16_call_stub
	,mips_return_in_memory,mips_strict_argument_naming): Use TARGET_NEWABI
	and TARGET_LODABI consistently.
	* config/mips/mips.md (exception_receiver): Likewise.
	* config/mips/linux64.h: Likewise.

2004-02-11  Hartmut Penner  <hpenner@de.ibm.com>

	* gcc/config/rs6000/rs6000.c (rs6000_override_options)
	Set AltiVec ABI and vrsave as default for ppc64 linux.