@@ -1,3 +1,8 @@
+2004-02-23  Fariborz Jahanian <fjahanian@apple.com>
+        * config/rs6000/rs6000.c (function_arg): call to
+        rs6000_mixed_function_arg for DFmode moved to allow
+        normal DFmode incoming register assignment.
+
 2004-02-19  Richard Henderson  <rth@redhat.com>
 
         * c-opts.c (warn_variadic_macros): New.
